// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalWrapper matches snapshot 1`] = `
<div
  className="css-view-1dbjc4n r-flex-13awgt0 r-pointerEvents-12vffkv"
>
  <div
    className="css-view-1dbjc4n r-WebkitOverflowScrolling-150rngu r-flexDirection-eqz5dr r-flexGrow-16y2uox r-flexShrink-1wbh5a2 r-overflowX-11yh6sk r-overflowY-1rnoaur r-transform-1sncvnh"
    onScroll={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    onWheel={[Function]}
  >
    <div
      className="css-view-1dbjc4n"
    >
      <div
        className="css-view-1dbjc4n r-alignSelf-k200y r-backgroundColor-1niwhzg r-height-1w2pmg r-width-13qz1uu"
      >
        <div
          className="css-view-1dbjc4n r-alignSelf-1kihuf0 r-flexGrow-16y2uox r-flexShrink-1q142lx r-marginBottom-p1pxzi r-marginTop-1mnahxq r-maxWidth-1xnn5q4 r-paddingLeft-b5h31w r-paddingRight-1ah4tor r-width-13qz1uu"
        >
          <div
            className="css-view-1dbjc4n r-display-6koalj r-flexDirection-18u37iz r-maxHeight-1qalap5 r-minHeight-1pexjug r-position-bnwqim r-width-13qz1uu"
          >
            <div
              className="css-view-1dbjc4n r-backgroundImage-o7i658 r-backgroundRepeat-1w25a1u r-borderBottomLeftRadius-re1h2s r-borderTopLeftRadius-1as3g83 r-flexGrow-16y2uox r-flexShrink-1q142lx r-maxWidth-1akpm2g r-minWidth-t66pp7 r-position-bnwqim r-zIndex-pezta"
              style={
                Object {
                  "backgroundColor": "rgba(238,238,238,1.00)",
                }
              }
            />
            <div
              className="css-view-1dbjc4n r-flexGrow-16y2uox r-flexShrink-1wbh5a2"
            >
              <div
                className="css-view-1dbjc4n r-backgroundColor-14lw9ot r-borderBottomRightRadius-qpmf2f r-borderTopRightRadius-dfv94e r-boxShadow-172poub r-flexGrow-16y2uox r-padding-nsbfu8 r-position-bnwqim r-zIndex-184en5c"
              >
                Testing
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ModalWrapper matches snapshot with properties 1`] = `
<div
  className="css-view-1dbjc4n r-flex-13awgt0 r-pointerEvents-12vffkv"
>
  <div
    className="css-view-1dbjc4n r-WebkitOverflowScrolling-150rngu r-flexDirection-eqz5dr r-flexGrow-16y2uox r-flexShrink-1wbh5a2 r-overflowX-11yh6sk r-overflowY-1rnoaur r-transform-1sncvnh"
    onScroll={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    onWheel={[Function]}
  >
    <div
      className="css-view-1dbjc4n"
    >
      <div
        className="css-view-1dbjc4n r-alignSelf-k200y r-backgroundColor-1niwhzg r-height-1w2pmg r-width-13qz1uu"
      >
        <div
          className="css-view-1dbjc4n r-alignSelf-1kihuf0 r-flexGrow-16y2uox r-flexShrink-1q142lx r-marginBottom-p1pxzi r-marginTop-1mnahxq r-maxWidth-1xnn5q4 r-paddingLeft-b5h31w r-paddingRight-1ah4tor r-width-13qz1uu"
        >
          <div
            className="css-view-1dbjc4n r-display-6koalj r-flexDirection-18u37iz r-maxHeight-1qalap5 r-minHeight-1pexjug r-position-bnwqim r-width-13qz1uu"
          >
            <div
              className="css-view-1dbjc4n r-backgroundImage-o7i658 r-backgroundRepeat-1w25a1u r-borderBottomLeftRadius-re1h2s r-borderTopLeftRadius-1as3g83 r-flexGrow-16y2uox r-flexShrink-1q142lx r-marginBottom-1ifxtd0 r-maxWidth-1akpm2g r-minWidth-t66pp7 r-position-bnwqim r-zIndex-pezta"
              style={
                Object {
                  "backgroundColor": "rgba(238,238,238,1.00)",
                }
              }
            />
            <div
              className="css-view-1dbjc4n r-flexGrow-16y2uox r-flexShrink-1wbh5a2"
            >
              <div
                className="css-view-1dbjc4n r-backgroundColor-14lw9ot r-borderBottomRightRadius-zmljjp r-borderTopRightRadius-dfv94e r-boxShadow-172poub r-flexGrow-16y2uox r-padding-nsbfu8 r-position-bnwqim r-zIndex-184en5c"
              >
                Testing
              </div>
              <div
                className="css-view-1dbjc4n r-backgroundImage-693lkh r-backgroundPosition-psfvt2 r-backgroundRepeat-f6vetv r-backgroundSize-jug86b r-height-10ptun7 r-position-bnwqim r-width-13qz1uu r-zIndex-pezta"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
